# ShoppingAgent

./: .gitignore  README.md  debug_db.py  main.py  pyproject.toml  requirements.txt  test_mongo.py
shop_agent/: agent.py  tools.py
shop_agent/.adk/: session.db
util/: embedding.py  mongodb.py
