[project]
name = "day-47"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-adk",
  "python-dotenv",
  "pymongo",
  "sentence-transformers",
  "certifi",
]
[tool.setuptools.packages.find]
where = ["."]
[tool.setuptools]
packages = ["shop_agent"]